added timer and answer display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <h1 class="title">Pop Quiz, Hotshot!</h1>
+    <div class="countdown"><p>05:00</p></div>
     <div class="container">
+        <div id="quiz-title"><p class="code">Coding Quiz Challenge</p></div>
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
@@ -24,9 +26,9 @@
         <div class="controls">
             <button type="start-btn" class="start-btn btn" id="start-btn">Start Quiz!</button>
             <button type="next-btn" class="next-btn btn hide" id="next-btn">Next Question</button>
-            <button type="submit-btn" class="submit-btn btn hide">Submit Quiz</button>
+            <button type="submit-btn" class="submit-btn btn hide">Submit Quiz</button>  
         </div>
-    </div>
+    </div>    
     <div id="results"></div>
 </body>
 </html>
