--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <h1 class="title">Pop Quiz, Hotshot!</h1>
-    <div class="countdown"><p>05:00</p></div>
+    <div id="count-down" class="timer"><p>5:00</p></div>
     <div class="container">
-        <div id="quiz-title"><p class="code">Coding Quiz Challenge</p></div>
+        <div id="quiz-title">
+            <p class="code">Coding Quiz Challenge</p>
+            <p class="code">You have five minutes to complete the quiz.</p>
+        </div>
         <div id="question-container" class="hide">
             <div id="question">Question</div>
             <div id="answer-buttons" class="btn-grid">
